Bug 103847 - Slide background settings are different on side bar and in slide properties dialog
Summary: Slide background settings are different on side bar and in slide properties d...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All Windows (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
: 105792 (view as bug list)
Depends on:
Blocks: Area-Fill-Tab
  Show dependency treegraph
 
Reported: 2016-11-10 20:56 UTC by Tamás Zolnai
Modified: 2020-12-04 14:26 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
ODP document with gradient background (15.84 KB, application/vnd.oasis.opendocument.presentation)
2016-11-10 20:57 UTC, Tamás Zolnai
Details
A document created with older LibO, containing a shape with custom hatch fill (24.56 KB, application/vnd.oasis.opendocument.graphics-flat-xml)
2017-03-06 16:29 UTC, Katarina Behrens (Inactive)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2016-11-10 20:56:11 UTC
Description:
If I set gradient background to specific slide on the side bar it has no effect on slide properties dialog.
The same problem if I open a document with a gradient background. Side bar shows the right colors, but the slide properties dialog does not.

Steps to Reproduce:
1. Open attached ODP document
2. Check properties on side bar -> Good gradient colors are shown
3. Slide context menu -> Slide properties... -> Wrong colors are displayed for gradient background (I see green colors).

Actual Results:  
Slide properties dialog shows wrong gradient colors.

Expected Results:
Slide properties dialog should be in sync with the side bar and should show the right gradient colors.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.87 Safari/537.36
Comment 1 Tamás Zolnai 2016-11-10 20:57:26 UTC
Created attachment 128649 [details]
ODP document with gradient background
Comment 2 A (Andy) 2016-11-12 07:34:46 UTC
I have the problem already in LO 5.2.3.3 (Win 8.1) that the green gradient (Tango: green) is shown in the Slide Properties of the Context Menu, but there is also only a limited selection of gradients available in the Slide Properties (I can not customise it like in the Side Bar)?
Comment 3 Buovjaga 2016-11-24 08:02:47 UTC
Confirmed.

Win 7 Pro 64-bit Version: 5.3.0.0.alpha1+
Build ID: 172325bedf69bbc162f3c1948264451c90c105a3
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; Layout Engine: new; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-11-21_05:26:40
Locale: fi-FI (fi_FI); Calc: group
Comment 4 Katarina Behrens (Inactive) 2017-02-21 21:27:29 UTC
*** Bug 105792 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2017-03-06 13:19:48 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=63961b9b45c95999dcc6b5ab080035609068ff69

tdf#103847: Pass also XFillStyleItem to subtabs

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Katarina Behrens (Inactive) 2017-03-06 16:29:28 UTC
Created attachment 131681 [details]
A document created with older LibO, containing a shape with custom hatch fill

It is the same for shapes -- if the given fill style is not among those preset ones, it won't show in the dialog. Instead 1st preset in the list will be selected and shown.

This holds for gradient as well as hatch fills (haven't really tried bitmaps, patterns respectively)
Comment 7 Katarina Behrens (Inactive) 2017-03-06 16:32:41 UTC
Anyway, hopefully fixed now
Comment 8 Buovjaga 2017-03-20 11:32:03 UTC
Confirmed fix.

Win 7 Pro 64-bit Version: 5.4.0.0.alpha0+
Build ID: 2356bfdb1b99a93fcb35fefc0f587158e7d160c2
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-03-20_00:30:32
Locale: fi-FI (fi_FI); Calc: CL