tdf#103847: Pass also XFillStyleItem to subtabs

this resolves the issue of non-preset gradient and hatch values not
being shown. Bitmap is still broken (beyond repair)

Change-Id: Ifad8f3a56b534e26def69c0b0bb2ed55de53bcda
Reviewed-on: https://gerrit.libreoffice.org/34908
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>